<resources>
    <string name="app_name">DeepWatch</string>
    <string name="Welcome">Olá, seja bem vindo!</string>
    <string name="logintxt">LOGIN</string>
    <string name="ok">OK</string>
    <string name="ola">Olá,</string>
    <string name="olateste">Olá, Anthony!</string>
    <string name="email">E-mail</string>
    <string name="senhatxt">Senha</string>
    <string name="status">Status:</string>
    <string name="statusteste">Status: OK!</string>
    <string name="ajustes">Ajustes</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="statusOK">Status: OK</string>
    <string name="acessar">Acessar</string>
    <string name="novocadastro">Não tem cadastro?\nClique aqui</string>
    <string name="NomeCaps">NOME</string>
    <string name="SobrenomeCaps">SOBRENOME</string>
    <string name="CPF">CPF</string>
    <string name="TelefoneCaps">TELEFONE</string>
    <string name="EmailCaps">E-MAIL</string>
    <string name="DtNascCaps">DATA DE NASCIMENTO</string>
    <string name="cadastrarCaps">CADASTRAR</string>
    <string name="CpfExemplo">000.000.000-00</string>
    <string name="senhaReqMin">A senha deve conter entre 8 e 90 caracteres e deve possuir pelo menos 1 número.</string>
    <string name="erroLogin">Login e/ou senha inválidos!</string>
    <string name="emailInvalido">E-mail Inválido</string>
    <string name="senhaInvalida">Senha Inválida</string>
    <string name="confirmarSenha">Confirme sua senha</string>
    <string name="deviceNameTeste">Nome: Meu Wearable</string>
    <string name="deviceMacTeste">Endereço MAC: 04:08:14:15:23:42</string>
    <string name="deviceStatusTeste">Status: OK (Enviando dados)</string>
    <string name="deviceFirstConnectedTeste">Primeira Conexão: 22/05/2019 14:09:23</string>
    <string name="deviceConnStrengthTeste">Sinal: -33dBm (Bom)</string>
    <string name="usuarioNomeCompTeste">Anthony Edward Stark</string>
    <string name="usuarioEmailTeste">ironman@starkindustries.com</string>
    <string name="usuarioTelefoneTeste">9-0152-3000</string>
    <string name="usuarioCpfTeste">219.256.855-00</string>
    <string name="usuarioDtNascTeste">29/05/1970</string>
</resources>
