<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="232dp"
            android:layout_height="92dp"
            android:id="@+id/logo"
            android:src="@drawable/logo_v10_927_366"
            android:layout_marginTop="5sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
    />
    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/cacelCadastro"
            android:src="@drawable/icon_sair_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linCad"
            android:layout_below="@id/logo"
            android:gravity="fill_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_margin="10sp"
    >
    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/camponome"
            android:hint="@string/NomeCaps"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"

    />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/camposobrenome"
            android:layout_below="@id/camponome"
            android:hint="@string/SobrenomeCaps"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"
    />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/campoemail"
            android:layout_below="@id/camposobrenome"
            android:hint="@string/EmailCaps"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"
    />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/campotelefone"
            android:layout_below="@id/campoemail"
            android:hint="@string/TelefoneCaps"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"

    />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/campoDtNasc"
            android:layout_below="@id/campotelefone"
            android:hint="@string/DtNascCaps"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"

    />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/campoCpf"
            android:layout_below="@id/campoDtNasc"
            android:hint="@string/CPF"
            android:layout_margin="10sp"
            android:padding="2dp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:textSize="20dp"
            android:background="@color/light_blue"
            android:layout_gravity="center"
            android:gravity="center"

    />
        <EditText
                android:layout_height="wrap_content"
                android:layout_width="250sp"
                android:id="@+id/campoNovaSenha"
                android:layout_below="@id/campoCpf"
                android:hint="@string/senhatxt"
                android:layout_margin="10sp"
                android:padding="2dp"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/dark_gray"
                android:textSize="20dp"
                android:background="@color/light_blue"
                android:layout_gravity="center"
                android:gravity="center"

        />

        <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/senhaReqMin"
                android:layout_margin="10sp"
                android:padding="2dp"
                android:textColor="@color/main_blue"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"
        />

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="250sp"
                android:id="@+id/campoNovaSenhaConf"
                android:layout_below="@id/campoNovaSenha"
                android:hint="@string/confirmarSenha"
                android:layout_margin="10sp"
                android:padding="2dp"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/dark_gray"
                android:textSize="20dp"
                android:background="@color/light_blue"
                android:layout_gravity="center"
                android:gravity="center"

        />
    </LinearLayout>
    <Button
            android:layout_height="wrap_content"
            android:layout_width="250sp"
            android:id="@+id/btnCadastro"
            android:text="@string/cadastrarCaps"
            android:layout_below="@id/linCad"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:background="#5E93C1"
            android:layout_centerHorizontal="true"
            android:padding="7sp"
            android:layout_margin="40sp"
    />
</RelativeLayout>
</ScrollView>