<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="463sp"
            android:layout_height="182sp"
            android:id="@+id/logo"
            android:src="@drawable/logo_v10_927_366"
            android:layout_marginTop="25sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/logintxt"
            android:text="@string/logintxt"
            android:gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:textSize="30sp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:textColor="@color/main_blue"
    />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/responseTxt"
            android:text="@string/erroLogin"
            android:gravity="center_horizontal"
            android:layout_margin="8sp"
            android:textSize="16sp"
            android:layout_below="@id/logintxt"
            android:layout_centerHorizontal="true"
            android:textColor="@color/transparent"
    />

    <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/campologin"
            android:layout_below="@id/logintxt"
            android:layout_marginTop="35sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            android:textSize="24sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:background="@color/light_blue"
    />

    <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/camposenha"
            android:layout_below="@id/campologin"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:hint="@string/senhatxt"
            android:textSize="24sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_gray"
            android:inputType="textPassword"
            android:background="@color/light_blue"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:onClick="tentarLogin"
            android:layout_below="@id/camposenha"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="30sp"
            android:padding="5sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/acessar"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:background="#5E93C1"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastro"
            android:onClick="cadastrar"
            android:layout_below="@id/btnLogin"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="30sp"
            android:padding="5sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/novocadastro"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:background="#5E93C1"
    />

</RelativeLayout>
