<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="232dp"
            android:layout_height="92dp"
            android:id="@+id/logo"
            android:src="@drawable/logo_v10_927_366"
            android:layout_marginTop="5sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
    />

    <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/logout"
            android:src="@drawable/icon_sair_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
    />

    <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/options"
            android:src="@drawable/icon_options_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
    />

    <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/addBlueTooth"
            android:src="@drawable/icon_adicionar_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
    />

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:layout_centerInParent="true"
            android:padding="7dp"
            android:layout_margin="10dp"
    >
        <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/deviceIcon"
                android:src="@drawable/icon_wearable_blue_200_200"
                android:layout_centerHorizontal="true"
                android:layout_margin="15sp"
                android:padding="4dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceName"
                android:layout_below="@id/deviceIcon"
                android:text="@string/deviceNameTeste"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:layout_margin="5dp"

        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceMac"
                android:layout_below="@id/deviceName"
                android:text="@string/deviceMacTeste"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:layout_margin="5dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceStatus"
                android:layout_below="@id/deviceMac"
                android:text="@string/deviceStatusTeste"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:layout_margin="5dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceFirstConnected"
                android:layout_below="@id/deviceStatus"
                android:text="@string/deviceFirstConnectedTeste"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:layout_margin="5dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceConnStrength"
                android:layout_below="@id/deviceFirstConnected"
                android:text="@string/deviceConnStrengthTeste"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:layout_margin="5dp"
        />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="2sp"
    >

        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_bluetooth_sel_125_125"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_home_125_125"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_usuario_125_125"
        />
    </LinearLayout>

</RelativeLayout>
