<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="232dp"
            android:layout_height="92dp"
            android:id="@+id/logo"
            android:src="@drawable/logo_v10_927_366"
            android:layout_marginTop="5sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
    />

    <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/logout"
            android:src="@drawable/icon_sair_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
    />

    <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/options"
            android:src="@drawable/icon_options_125_125"
            android:layout_margin="10sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
    />


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:layout_centerInParent="true"
            android:padding="7dp"
            android:layout_margin="10dp"
            android:layout_above="@id/menu"
    >
        <ImageView
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:id="@+id/userIcon"
                android:src="@drawable/icon_usuario_sel_125_125"
                android:layout_centerHorizontal="true"
                android:layout_margin="15sp"
                android:padding="4dp"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin1UserNome"
                android:layout_below="@id/userIcon"
                android:layout_margin="10dp"
        >
            <ImageView
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:id="@+id/lin1Icon"
                    android:src="@drawable/icon_usuario_sel_125_125"
                    android:layout_weight="1"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin1Text"
                    android:text="@string/usuarioNomeCompTeste"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp"
                    android:layout_margin="5sp"
                    android:layout_gravity="fill"
                    android:layout_weight="3"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin2UserEmail"
                android:layout_below="@id/lin1UserNome"
                android:layout_margin="10dp"
        >
            <ImageView
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:id="@+id/lin2Icon"
                    android:src="@drawable/icon_usuario_doc_email_200_200"
                    android:layout_weight="1"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin2Text"
                    android:text="@string/usuarioEmailTeste"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp"
                    android:layout_margin="5sp"
                    android:layout_gravity="fill"
                    android:layout_weight="3"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin3UserFone"
                android:layout_below="@id/lin2UserEmail"
                android:layout_margin="10dp"
        >
            <ImageView
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:id="@+id/lin3Icon"
                    android:src="@drawable/icon_usuario_doc_fone_200_200"
                    android:layout_weight="1"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin3Text"
                    android:text="@string/usuarioTelefoneTeste"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp"
                    android:layout_margin="5sp"
                    android:layout_gravity="fill"
                    android:layout_weight="3"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin4UserCpf"
                android:layout_below="@id/lin3UserFone"
                android:layout_margin="10dp"
        >
            <ImageView
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:id="@+id/lin4Icon"
                    android:src="@drawable/icon_usuario_doc_cpf_200_200"
                    android:layout_weight="1"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin4Text"
                    android:text="@string/usuarioCpfTeste"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp"
                    android:layout_margin="5sp"
                    android:layout_gravity="fill"
                    android:layout_weight="3"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin5UserDtNasc"
                android:layout_below="@id/lin4UserCpf"
                android:layout_margin="10dp"
        >
            <ImageView
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:id="@+id/lin5Icon"
                    android:src="@drawable/icon_usuario_doc_cal1_200_200"
                    android:layout_weight="1"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin5Text"
                    android:text="@string/usuarioDtNascTeste"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp"
                    android:layout_margin="5sp"
                    android:layout_gravity="fill"
                    android:layout_weight="3"
            />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="2sp"
    >

        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_bluetooth_125_125"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_home_125_125"
        />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_usuario_sel_125_125"
        />
    </LinearLayout>

</RelativeLayout>
